style.css
* {
  -moz-box-sizing: border-box;
       box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;

  background: #F0F0F0;

  line-height: 1.5;

  color: #505050;
  text-rendering: optimizeLegibility;

  font-family: 'Roboto Condensed', sans-serif;
}


h1, h2, h3, h4 {
  margin: 0;
  padding: 0;

  font-family: 'Montserrat', sans-serif;
  font-size: 27px;

  color: #262526;
}

p {
  margin: 0;
  padding: 0;
}

a {
  color: #F06060;
}

ul, ol {
  margin: 0 0 18px 0;
}


/* * * * *
 * HEADER
 */
.page-header {
  background: white;
}

.logo {
  padding: 18px;
  margin: auto;

  max-width: 640px;

  line-height: 1;
  color: #404040;

  font-size: 40.5px;
  font-weight: bold;
}

.logo-the {
  color: #606060;
  font-weight: normal;
}

.logo-u {
  color: #F60A20;
  color: #F06060;
}

.main-wrapper {
  margin: 0 auto;
  max-width: 640px;
}

main {
  margin: 18px 8px 8px 8px;
  padding: 1px 0; /* Stop margin collapsing */

  background: white;
}

.article-header {
  margin: 18px 0;
}

.page-title {
  font-weight: bold;
}

.page-title::before {
  font-weight: normal;
  color: #E0E0E0;
  content: '$ cat \'';
}

.page-title::after {
  font-weight: normal;
  color: #E0E0E0;
  content: '\' ↩';
}

.section-title, .section-title h1, .section-title h2 {
  color: #606060;
  font-weight: normal;
}

.section-title {
  margin-bottom: 18px;
  border-bottom: thin dashed #E0E0E0;
}

.section-title h2 {
  color: #F06060;
  padding-bottom: 8px;
  font-size: 12px;
}

.main-content {
  margin: 18px;
}

.main-content p {
  margin-bottom: 18px;

  font-size: 18px;
}

.main-content > section {
  margin-bottom: 36px;
}

.main-content > section:last-child {
  margin-bottom: 0;
}

.notice {
  margin-bottom: 18px;
  padding: 12px;
  background: #FEF6D8;
  border: thin dashed #EEE6C8;
}

.notice p {
  margin: 0;

  font-size: 14px;
}

.list-header {
  font-size: 18px;
  font-weight: normal;
}

/* * *
 * Mixins
 */
.shadowed {
  background: white;
  box-shadow: 0px 2px 2px 1px #E0E0E0;
}

